test/corpus/angular.txt
============
Angular attribute
============

some-tag([attr]='hello')

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (js_attribute_name)
        (quoted_javascript
          (javascript))))))

============
Angular output
============

some-tag((attr)='hello')

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (js_attribute_name)
        (quoted_javascript
          (javascript))))))

============
Angular output javascript
============

some-tag((attr)='console.log("test")')

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (js_attribute_name)
        (quoted_javascript
          (javascript))))))

============
Angular directive
============

some-tag(*ngIf='enabled')

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (js_attribute_name)
        (quoted_javascript
          (javascript))))))
