test/corpus/conditionals.txt
============
Conditional
============

if user.description
  tag
else if authorised
  tag
else
  tag

---

(source_file
  (conditional
    (javascript)
    (tag
      (tag_name)))
  (conditional
    (javascript)
    (tag
      (tag_name)))
  (conditional
    (tag
      (tag_name))))

============
Conditional in tag
============

span
  if user.description
    tag
  else if authorised
    tag
  else
    tag

---

(source_file
  (tag
    (tag_name)
    (children
      (conditional
        (javascript)
        (tag
          (tag_name)))
      (conditional
        (javascript)
        (tag
          (tag_name)))
      (conditional
        (tag
          (tag_name))))))

============
Conditional in tag real example
============

#user
  if user.description
    h2.green Description
    p= user.description
  else if authorised
    span content
  else
    span content

---

(source_file
  (tag
    (id)
    (children
      (conditional
        (javascript)
        (tag
          (tag_name)
          (class)
          (content)
          (children
            (tag
              (tag_name)
              (buffered_code
                (javascript))))))
      (conditional
        (javascript)
        (tag
          (tag_name)
          (content)))
      (conditional
        (tag
          (tag_name)
          (content))))))
