test/corpus/include.txt
========================
Basic include
========================

include folder/file.pug

tag

---

(source_file
  (include
    (filename))
  (tag
    (tag_name)))

========================
Include with filter
========================

include:filter:filter folder/file.pug

tag

---

(source_file
  (include
    (filename))
  (tag
    (tag_name)))
